fix: lint AB#10772

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -1,11 +1,13 @@
 <span class="ion-float-start">
-  <ion-title class="center-heading" size="medium" data-test="heading-display-name-label"
-    >
+  <ion-title
+    class="center-heading"
+    size="medium"
+    data-test="heading-display-name-label"
+  >
     <span>
       IBF PORTAL <strong>{{ country?.countryName }} {{ disasterType }}</strong>
     </span>
-    </ion-title
-  > 
+  </ion-title>
 </span>
 
 <ion-button
