feat: show event-name in chat AB#10724

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -50,7 +50,8 @@
                 leadTime: eventService.state.firstLeadTimeLabel,
                 timeUnit: eventService.state.timeUnit,
                 disasterTypeLabel: disasterTypeLabel,
-                monthYear: eventService.state.firstLeadTimeName
+                monthYear: eventService.state.firstLeadTimeName,
+                eventName: eventService.state.event.eventName
               }
       "
     ></p>
@@ -71,7 +72,8 @@
             : {
                 name: authService.displayName,
                 startDate: eventService.state.event.startDate,
-                endDate: eventService.state.event.endDate
+                endDate: eventService.state.event.endDate,
+                eventName: eventService.state.event.eventName
               }
       "
     ></p>
