--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -34,12 +34,9 @@ app-export-view {
 .today-button {
   height: 40px;
   margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-}
-
-.noHover{
-  pointer-events: none;
+  margin-bottom: 0px;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 // The lay-out of the `ion-content`-area of the page/screen
@@ -66,25 +63,48 @@ app-export-view {
             --box-shadow: none;
             text-transform: uppercase;
             opacity: 1;
+            padding-inline-start: 0px;
+            height: 60%;
+            margin: 0;
+            margin-bottom: 2px;
 
             app-date-button {
               background-color: var(--ion-color-ibf-primary-contrast);
               color: var(--ion-color-ibf-primary);
               border: var(--ion-color-ibf-primary);
               height: 38px;
-              width: 80px;
+              width: 70px;
               font-weight: 700;
-              padding: 6px;
+              padding: 5px;
+              padding-top: 5px;
             }
 
             span {
               &.today {
-                font-size: 24px;
-                padding-left: 20px;
+                font-size: 25px;
+                padding-top: 10px;
+                padding-left: 0px;
+                display: flex;
                 font-weight: 600;
+                background-color: var(--ion-color-ibf-primary-contrast);
+                color: var(--ion-color-ibf-primary);
+                // border: var(--ion-color-ibf-primary);
+                height: 38px;
+                width: 100px;
               }
             }
+            .button-border-line{
+                border-bottom-color: 2px solid var(--ion-color-ibf-primary);
+                border-bottom: var(--ion-color-ibf-primary);
+                border-bottom: solid rgb(83, 7, 224);border-width: 2px;
+              background-color: var(--ion-color-ibf-primary-contrast);
+            }
           }
+
+          // .button:hover{
+          //   // color: white;
+          //   background-color: #ebebec;
+          // }
 
           .component-title-thumbnail {
             height: 24px;
@@ -93,6 +113,18 @@ app-export-view {
           }
         }
       }
+
+        .shadow{
+          border-top: 0.06px solid #cfc3c3;
+          border-right: 1px solid #d0cdcd;
+          margin-top: 10px;
+          margin-left: 0px;
+          padding-right: 8px;
+          padding-top: 2px;
+          -webkit-box-shadow: 0px -4px 3px rgba(85, 82, 82, 0.75);
+          -moz-box-shadow: 0px -4px 3px rgba(63, 62, 62, 0.75);
+          box-shadow: 0px -4px 9px 2px rgba(209, 207, 207, 0.75);
+        }
 
       .component-content {
         flex-grow: 1;
