feat: track layer AB#10717

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -59,6 +59,9 @@
               [class.glofas-layer]="
                 layer.name === IbfLayerName.glofasStations && layer.active
               "
+              [class.typhoon-track-layer]="
+              layer.name === IbfLayerName.typhoonTracks && layer.active
+            "
               [class.red-cross-layer]="
                 layer.name === IbfLayerName.redCrossBranches && layer.active
               "
