--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -43,6 +43,9 @@
             .glofas-layer {
               background-image: url('../../../assets/markers/glofas-no.png');
             }
+            .typhoon-track-layer {
+              background-image: url('../../../assets/markers/glofas-no.png');
+            }
             .red-cross-layer {
               background-image: url('../../../assets/markers/red-cross.png');
             }
