feat: typhoon track in dashboard AB#10717 AB#10718

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -60,8 +60,8 @@
                 layer.name === IbfLayerName.glofasStations && layer.active
               "
               [class.typhoon-track-layer]="
-              layer.name === IbfLayerName.typhoonTracks && layer.active
-            "
+                layer.name === IbfLayerName.typhoonTrack && layer.active
+              "
               [class.red-cross-layer]="
                 layer.name === IbfLayerName.redCrossBranches && layer.active
               "
