feat: change today-bar AB#10772

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -29,6 +29,7 @@
     &.system-avatar {
       color: black;
       background: white;
+      border: grey solid 1px;
       margin-left: 0.5em;
     }
 
