--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -66,7 +66,6 @@ app-export-view {
             padding-inline-start: 0px;
             height: 60%;
             margin: 0;
-            margin-bottom: 2px;
 
             app-date-button {
               background-color: var(--ion-color-ibf-primary-contrast);
@@ -82,29 +81,26 @@ app-export-view {
             span {
               &.today {
                 font-size: 25px;
-                padding-top: 10px;
+                padding-top: 5px;
+                padding-bottom: 5px;
                 padding-left: 0px;
                 display: flex;
                 font-weight: 600;
                 background-color: var(--ion-color-ibf-primary-contrast);
                 color: var(--ion-color-ibf-primary);
-                // border: var(--ion-color-ibf-primary);
+                text-align: center;
                 height: 38px;
                 width: 100px;
               }
             }
-            .button-border-line{
-                border-bottom-color: 2px solid var(--ion-color-ibf-primary);
-                border-bottom: var(--ion-color-ibf-primary);
-                border-bottom: solid rgb(83, 7, 224);border-width: 2px;
+            .button-border-line {
+              border-bottom-color: 2px solid var(--ion-color-ibf-primary);
+              border-bottom: var(--ion-color-ibf-primary);
+              border-bottom: solid rgb(83, 7, 224);
+              border-width: 2px;
               background-color: var(--ion-color-ibf-primary-contrast);
             }
           }
-
-          // .button:hover{
-          //   // color: white;
-          //   background-color: #ebebec;
-          // }
 
           .component-title-thumbnail {
             height: 24px;
@@ -114,33 +110,17 @@ app-export-view {
         }
       }
 
-        .shadow{
-          border-top: 0.06px solid #cfc3c3;
-          border-right: 1px solid #d0cdcd;
-          margin-top: 10px;
-          margin-left: 0px;
-          padding-right: 8px;
-          padding-top: 2px;
-          -webkit-box-shadow: 0px -4px 3px rgba(85, 82, 82, 0.75);
-          -moz-box-shadow: 0px -4px 3px rgba(63, 62, 62, 0.75);
-          box-shadow: 0px -4px 9px 2px rgba(209, 207, 207, 0.75);
-        }
+      .shadow {
+        border-top: 0.06px solid #cfc3c3;
+        border-right: 1px solid #d0cdcd;
+        margin-top: 0px; // 10px;
+        -webkit-box-shadow: 0px -4px 3px rgba(85, 82, 82, 0.75);
+        -moz-box-shadow: 0px -4px 3px rgba(63, 62, 62, 0.75);
+        box-shadow: 0px -4px 9px 2px rgba(209, 207, 207, 0.75);
+      }
 
       .component-content {
         flex-grow: 1;
-
-        .ibf-dashboard-left-column-right-sub-column {
-          display: flex;
-
-          ion-content {
-            .ibf-dashboard-left-column-right-sub-column-grid {
-              display: flex;
-              flex-flow: column nowrap;
-              overflow: auto;
-              height: 100%;
-            }
-          }
-        }
       }
     }
 
@@ -151,6 +131,19 @@ app-export-view {
       .component-content {
         flex-grow: 1;
         overflow: hidden;
+
+        .ibf-dashboard-right-column-left-sub-column {
+          display: flex;
+
+          ion-content {
+            .ibf-dashboard-right-column-left-sub-column-grid {
+              display: flex;
+              flex-flow: column nowrap;
+              overflow: auto;
+              height: 100%;
+            }
+          }
+        }
       }
     }
   }
