--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -5,10 +5,7 @@
         <ion-icon name="apps" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title
-      [translate]="'login-page.title'"
-      data-test="page-title"
-    ></ion-title>
+    <app-user-state [isLoggedIn]="false"></app-user-state>
     <ion-buttons slot="end">
       <ion-button
         href="https://github.com/rodekruis/IBF-system/releases/tag/{{
