--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -32,6 +32,7 @@
       color="ibf-white"
     ></app-about-btn>
     <app-video-guide-button color="ibf-white"></app-video-guide-button>
+    <app-export-view class="ion-align-items-center"></app-export-view>
   </app-dialogue-turn>
   <!-- Active event -->
   <app-dialogue-turn
@@ -62,6 +63,7 @@
       color="ibf-white"
     ></app-about-btn>
     <app-video-guide-button color="ibf-white"></app-video-guide-button>
+    <app-export-view class="ion-align-items-center"></app-export-view>
   </app-dialogue-turn>
   <!-- Old event -->
   <app-dialogue-turn *ngIf="eventService.isOldEvent()" isConnected="true">
@@ -84,6 +86,7 @@
       color="ibf-white"
     ></app-about-btn>
     <app-video-guide-button color="ibf-white"></app-video-guide-button>
+    <app-export-view class="ion-align-items-center"></app-export-view>
   </app-dialogue-turn>
 
   <ng-container *ngIf="eventService.state.activeEvent">
