--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -16,16 +16,16 @@
         </span>
       </ion-title>
     </span>
-    <ion-buttons slot="end"
-      style="border-radius: 25px;"
+    <ion-buttons
+      slot="end"
+      style="border-radius: 25px"
       size="small"
       fill="solid"
-      
     >
       <ion-title
-      [translate]="'login-page.title'"
-      data-test="page-title"
-    ></ion-title>
+        [translate]="'login-page.title'"
+        data-test="page-title"
+      ></ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
