--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -111,12 +111,12 @@ app-export-view {
       }
 
       .shadow {
-        border-top: 0.06px solid #cfc3c3;
-        border-right: 1px solid #d0cdcd;
-        margin-top: 0px; // 10px;
-        -webkit-box-shadow: 0px -4px 3px rgba(85, 82, 82, 0.75);
-        -moz-box-shadow: 0px -4px 3px rgba(63, 62, 62, 0.75);
-        box-shadow: 0px -4px 9px 2px rgba(209, 207, 207, 0.75);
+        border-top: 0.06px solid #c6c3cf;
+        border-right: 1px solid #c7c3ce;
+        margin-top: 5px;
+        -webkit-box-shadow: 0px -2px 1px rgba(82, 82, 85, 0.75);
+        -moz-box-shadow: 3px -1px 3px rgba(62, 62, 63, 0.75);
+        box-shadow: 3px -2px 9px 1px rgba(163, 160, 160, 0.75);
       }
 
       .component-content {
