feat: added popup text AB#10722

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -62,6 +62,9 @@
               [class.typhoon-track-layer]="
                 layer.name === IbfLayerName.typhoonTrack && layer.active
               "
+              [class.vulnerable-groups-layer]="
+                layer.name === IbfLayerName.vulnerableGroups && layer.active
+              "
               [class.red-cross-layer]="
                 layer.name === IbfLayerName.redCrossBranches && layer.active
               "
