--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -46,6 +46,9 @@
             .typhoon-track-layer {
               background-image: url('../../../assets/markers/glofas-no.png');
             }
+            .vulnerable-groups-layer {
+              background-image: url('../../../assets/markers/glofas-no.png');
+            }
             .red-cross-layer {
               background-image: url('../../../assets/markers/red-cross.png');
             }
