feat: show non-active leadtimes typhoon AB#10945

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -40,7 +40,8 @@
     *ngIf="eventService.state.activeEvent && eventService.state.activeTrigger"
     isConnected="true"
   >
-    <p *ngFor="let event of eventService.state.events"
+    <p
+      *ngFor="let event of eventService.state.events"
       [innerHTML]="
         'chat-component.' +
           disasterCategory +
