--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -1,10 +1,5 @@
-<div 
-  *ngIf="eventService.state.events.length > 1"
-  class="containerDiv"
->
-  <div
-    *ngFor="let event of eventService.state.events"
-  >
+<div *ngIf="eventService.state.events.length > 1" class="containerDiv">
+  <div *ngFor="let event of eventService.state.events">
     <div *ngIf="event.eventName === selectedEventName">
       <ion-button
         class="ibf"
