--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -22,6 +22,7 @@
     <app-date-button
       [date]="timeStepButton.date"
       [unit]="timeStepButton.unit"
+      [active]="!timeStepButton.disabled"
     ></app-date-button>
   </ion-button>
 </ion-item>
