fix: selected event AB#11078

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -53,7 +53,7 @@
                 leadTime: event.firstLeadTimeLabel,
                 timeUnit: event.timeUnit,
                 disasterTypeLabel: disasterTypeLabel,
-                monthYear: event.firstLeadTimeName,
+                monthYear: event.yearMonth,
                 eventName: event.eventName
               }
       "
