feat: updated top bar AB#11149

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -17,6 +17,7 @@
     fill="solid"
     data-test="time-line-button"
     [class.active]="timeStepButton.active"
+    [class.nonactive]="timeStepButton.nonactive"
     (click)="handleTimeStepButtonClick(timeStepButton.value)"
   >
     <app-date-button
