--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.scss
@@ -6,3 +6,17 @@
   padding-top: 7px;
   text-transform: uppercase;
 }
+
+.top-bar-button{
+  height: 40px;
+  margin-top: 0;
+  margin-bottom: 0px;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.active{
+  // font-weight: 600;
+  background-color: var(--ion-color-ibf-primary-contrast);
+  color: var(--ion-color-ibf-primary);
+}
