feat: added icon AB#11150

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -13,7 +13,7 @@
       <ion-icon
         *ngIf="activeTriggerMsg === 'TRIGGERED'"
         class="ibf"
-        src="assets/icons/Alert Triangle.svg"
+        src="/assets/icons/Alert Triggered Title.svg"
         slot="start"
         class="containerTwo"
       ></ion-icon>
