--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -12,7 +12,7 @@
       <ion-icon
         *ngIf="activeTriggerMsg === 'TRIGGERED'"
         class="ibf"
-        src="/assets/icons/AlertAlert_Prepared_Purple_ 32x32.svg"
+        src="/assets/icons/Alert_Title_Purple.svg"
         slot="start"
         class="containerTwo"
       ></ion-icon>
