feat: improved chat section AB#10944

--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -2,9 +2,11 @@
   <div *ngFor="let event of eventService.state.events">
     <div *ngIf="event.eventName === selectedEventName">
       <ion-button
+        shape="block"
         class="ibf"
+        class="button-label"
         slot="start"
-        color="ibf-primary"
+        color="ibf-secondary"
         size="small"
         (click)="switchEvent(event)"
       >
@@ -15,6 +17,7 @@
     <div *ngIf="event.eventName !== selectedEventName">
       <ion-button
         class="ibf"
+        shape="block"
         slot="start"
         color="ibf-white"
         size="small"
