--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.scss
@@ -4,7 +4,9 @@
 .containerDiv {
   line-height: 1px;
   margin: 0px 2px 0px 2px;
-  display: flex;
+  display: block;
+  text-align: center;
+  padding:0.7em 1.4em;
 }
 .containerOne {
   justify-content: space-between;
@@ -12,6 +14,7 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  padding:0.7em 1.4em;
 }
 .containerTwo {
   display: block;
@@ -21,7 +24,10 @@
   cursor: pointer;
 }
 .containerThree {
-  font-size: 10px;
   padding: 5px;
   display: block;
+}
+
+.button-label{
+  font-weight: 700;
 }
