fix: adjust ux copy AB#11213

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -54,7 +54,7 @@
                   leadTime: event.firstLeadTimeLabel,
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
-                  monthYear: event.yearMonth,
+                  firstLeadTimeDate: event.firstLeadTimeDate,
                   eventName: event.eventName
                 }
         "
