--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -25,6 +25,19 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4">
+        <span
+          *ngFor="let disasterType of disasterTypes"
+          data-test="disaster-Type"
+          class="container"
+        >
+          <ion-icon
+            class="ibf"
+            [src]="disasterTypeMap[disasterType.disasterType].selectedNonTriggered"
+            slot="start"
+            class="containerTwo"
+          >
+          </ion-icon>
+        </span>
         <ion-card class="ibf-welcome-card">
           <ion-icon name="chatbubbles"></ion-icon>
           <ion-card-header>
