--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
@@ -68,6 +68,8 @@ app-timestamp {
 .container {
   height: 48px;
   width: 48px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0px 5px 0px 5px;
+  cursor: pointer;
+  padding-right: 10px;
+  display:inline;
 }
