feat: AB#1165 AB#11657 AB#11658

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
@@ -67,12 +67,12 @@ app-timestamp {
 
 .container {
   text-align: center;
+  margin-left: 20px;
 }
 
 .disaster-type-icon {
   height: 32px;
   width: 32px;
   margin: 0px 5px 0px 5px;
-  cursor: pointer;
   padding-right: 10px;
 }
