--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -39,7 +39,7 @@
           </ion-icon>
         </span>
         <ion-card class="ibf-welcome-card">
-          <ion-icon name="chatbubbles"></ion-icon>
+          <ion-icon src="assets/icons/ibf-logo.svg"></ion-icon>
           <ion-card-header>
             <ion-card-title [translate]="'login-page.welcome'">
             </ion-card-title>
