--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -13,7 +13,10 @@
   <div class="dialogue-turn--actor">
     <ng-container [ngSwitch]="actor">
       <ng-container *ngSwitchCase="allActors.system">
-        <ion-icon class="system-avatar" src="assets/icons/ibf-logo.svg"></ion-icon>
+        <ion-icon
+          class="system-avatar"
+          src="assets/icons/ibf-logo.svg"
+        ></ion-icon>
         <!-- <ion-avatar class="system-avatar" color="ibf-primary">
     
         </ion-avatar> -->
