feat: move today-btn to right AB#11753

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -118,6 +118,15 @@
                     class="today"
                     [translate]="'dashboard-page.today'"
                   ></span>
+                </ion-button>
+                <ion-button
+                  expand="full"
+                  fill="solid"
+                  slot="end"
+                  class="today-date-button ion-no-margin ion-no-padding"
+                  [disabled]="true"
+                  color="ibf-primary"
+                >
                   <app-date-button></app-date-button>
                 </ion-button>
               </ion-item>
