--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -39,6 +39,13 @@ app-export-view {
   padding-left: 0;
 }
 
+.today-date-button {
+  height: 100% !important;
+  width: 90px;
+  text-transform: uppercase;
+  --box-shadow: none;
+}
+
 // The lay-out of the `ion-content`-area of the page/screen
 .page-structure {
   min-height: 100%;
@@ -58,6 +65,7 @@ app-export-view {
           --background: transparent;
           --height: 40px;
           --min-height: 40px;
+          --inner-padding-end: 0px;
 
           ion-button {
             --box-shadow: none;
@@ -68,9 +76,9 @@ app-export-view {
             margin: 0;
 
             app-date-button {
-              background-color: var(--ion-color-ibf-primary-contrast);
-              color: var(--ion-color-ibf-primary);
-              border: var(--ion-color-ibf-primary);
+              background-color: var(--ion-color-ibf-primary);
+              color: var(--ion-color-ibf-primary-contrast);
+              border: var(--ion-color-ibf-primary-contrast);
               height: 38px;
               width: 70px;
               font-weight: 700;
