--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -204,6 +204,10 @@
   --width: 600px;
 }
 
+.ibf-forgot-password-popover {
+  --width: 400px;
+}
+
 .ibf-layer-control-popover,
 .ibf-indicator-information-popover {
   --width: 400px;
