--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -1,4 +1,4 @@
-<ion-item lines="none" class="ion-no-padding nonactive">
+<ion-item lines="none" class="ion-no-padding">
   <ion-progress-bar
     type="indeterminate"
     color="ibf-gray"
@@ -17,6 +17,7 @@
     fill="solid"
     data-test="time-line-button"
     [class.active]="timeStepButton.active"
+    [class.alert]="timeStepButton.alert && !timeStepButton.disabled"
     (click)="handleTimeStepButtonClick(timeStepButton.value)"
   >
     <app-date-button
